--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,8 +55,8 @@
             android:theme="@style/Theme.Baraz.Actionbar" />
         <activity
             android:name=".activities.ProductDetailActivity"
-            android:exported="false"
-            android:theme="@style/Theme.Baraz.Actionbar" />
+            android:exported="false"/>
+<!--            android:theme="@style/Theme.Baraz.Actionbar" />-->
         <activity
             android:name=".activities.MainActivity"
             android:exported="true" />
